--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-email-editor</title>
+    <title>zenEmailBuilder</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-email-editor doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Извините, но email редактор работает некорректно без включения JavaScript. Пожалуйста, включите его для продолжения.</strong>
     </noscript>
     <div id="app">
       <router-view></router-view>
